# quiz-bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  settings.yaml
migrations/: env.py
migrations/versions/: 2dcbc5790a66_add_quiz.py
yearbook/: bot.py  db_connection.py  main.py  quiz_handler.py  settings.py
yearbook/models/: __init__.py  db.py  quiz.py
